--- a/multiply_environment.yml
+++ b/multiply_environment.yml
@@ -187,7 +187,7 @@ dependencies:
   - pysocks=1.7.1=py36_0
   - pytest=4.6.4=py36_0
   - pytest-cov=2.7.1=py_0
-  - python=3.6.7=h357f687_1006
+  - python
   - python-dateutil=2.8.1=py_0
   - pytz=2019.3=py_0
   - pywavelets=1.1.1=py36hc1659b7_0
