--- a/environment.yaml
+++ b/environment.yaml
@@ -8,6 +8,8 @@ dependencies:
   - python-pdal
   - gdal
   - pip:
+    - shapely
+    -
     - https://github.com/QCDIS/Deploy_MULTIPLY/releases/download/0.1/BRDF_descriptors-1.3-py3-none-any.whl
     - https://github.com/QCDIS/Deploy_MULTIPLY/releases/download/0.1/KaFKA-0.0.0-py3-none-any.whl
     - https://github.com/QCDIS/Deploy_MULTIPLY/releases/download/0.1/multiply_core-0.6.1.dev0-py3-none-any.whl
