--- a/environment.yaml
+++ b/environment.yaml
@@ -11,7 +11,7 @@ dependencies:
   - pip
   - pip:
     - lazperf==1.4.4
-    - numpy==1.23.0
+    - numpy  #==1.23.0
     - absl-py>=1.00
     - alabaster==0.7.12
     - astor==0.8.1
@@ -23,7 +23,6 @@ dependencies:
     - branca==0.5.0
     - certifi==2022.5.18.1
     - cffi==1.15.0
-    - cftime==1.6.0
     - chardet==4.0.0
     - click==8.1.3
     - click-plugins==1.1.1
@@ -56,14 +55,6 @@ dependencies:
     - ipyleaflet==0.16.0
     - ipython>=8.3.0
     - jaraco.itertools==6.2.1
-
-    - jupyter==1.0.0
-    - jupyter_client>=7.3.1
-    - jupyter_core==4.10.0
-    - jupyterlab>=3.4.2
-    - jupyterlab_server==2.14.0
-    - keras-applications==1.0.8
-    - keras-preprocessing==1.1.2
     - kiwisolver==1.4.3
     - latexcodec==2.0.1 #==pyh9f0ad1d_0
     - lightgbm==3.3.2 #==py39he80948d_0
@@ -103,8 +94,7 @@ dependencies:
     - requests==2.28.0 #==pyhd8ed1ab_0
     - rtree==1.0.0 #==py39hb102c33_1
     - scikit-image>=0.19.2 ##====0.19.3 #==py39hde0f152_0
-    - scipy==1.8.1 #==py39he49c0e8_0
-    - setuptools>=62.3.4 ##==62.6.0 #==py39hf3d152e_0
+    - scipy
     - shapely>=1.8.0 #==1.8.2 #==py39h4fbd0eb_2
     - sip==6.5.1 #==py39he80948d_2
     - snowballstemmer==2.2.0 #==pyhd8ed1ab_0
