--- a/environment.yaml
+++ b/environment.yaml
@@ -11,7 +11,6 @@ dependencies:
   - pip
   - pip:
     - lazperf==1.4.4
-    - numpy  #==1.23.0
     - absl-py>=1.00
     - alabaster==0.7.12
     - astor==0.8.1
@@ -60,7 +59,6 @@ dependencies:
     - lightgbm==3.3.2 #==py39he80948d_0
     - llvmlite==0.38.1 #==py39h7d9a04d_0
     - lxml==4.9.0 #==py39hb9d737c_0
-
     - markdown==3.3.7 #==pyhd8ed1ab_0
     - matplotlib>=3.3.7 #==3.5.2 #==py39hf3d152e_0
     - mock==4.0.3 #==py39hf3d152e_3
@@ -68,7 +66,6 @@ dependencies:
     - netcdf4==1.5.8 #==nompi_py39h64b754b_101
     - networkx>=2.8.3 ##==2.8.4 #==pyhd8ed1ab_0
     - numba>=0.55.1 ##0.55.2 #==py39h66db6d7_1
-    - numpy>=1.21.6 ##1.22.4 #==py39h18676bf_0
     - olefile==0.46 #==pyh9f0ad1d_1
     - oset==0.1.3 #==py_1
     - pandas==1.4.2 #==py39h1832856_2
@@ -118,3 +115,12 @@ dependencies:
     - sentinelhub
     - laspy[lazrs,laszip]
     - git+https://github.com/JorisTimmermans/data-access.git
+    - git+https://github.com/JorisTimmermans/atmospheric_correction.git
+    - git+https://github.com/JorisTimmermans/multiply-core.git
+    - git+https://github.com/QCDIS/inference-engine.git
+    - git+https://github.com/QCDIS/prior-engine.git
+    - git+https://github.com/JorisTimmermans/atmospheric_correction.git
+    - git+https://github.com/JorisTimmermans/vm-support.git
+    - git+https://github.com/multiply-org/multiply-orchestration.git
+    - git+https://github.com/QCDIS/KaFKA-InferenceEngine.git
+    - git+https://github.com/QCDIS/BRDF_descriptors.git
