set numpy and pip version

--- a/environment.yaml
+++ b/environment.yaml
@@ -8,7 +8,7 @@ dependencies:
   - pdal
   - python-pdal
   - gdal
-  - pip
+  - pip>=22.3
   - pip:
     - lazperf==1.4.4
     - absl-py>=1.00
@@ -66,6 +66,7 @@ dependencies:
     - netcdf4==1.5.8 #==nompi_py39h64b754b_101
     - networkx>=2.8.3 ##==2.8.4 #==pyhd8ed1ab_0
     - numba>=0.55.1 ##0.55.2 #==py39h66db6d7_1
+    - numpy>=1.23.4
     - olefile==0.46 #==pyh9f0ad1d_1
     - oset==0.1.3 #==py_1
     - pandas==1.4.2 #==py39h1832856_2
