--- a/environment.yaml
+++ b/environment.yaml
@@ -57,7 +57,7 @@ dependencies:
     - kiwisolver==1.4.3
     - latexcodec==2.0.1 #==pyh9f0ad1d_0
     - lightgbm==3.3.2 #==py39he80948d_0
-    - llvmlite==0.38.1 #==py39h7d9a04d_0
+    - llvmlite
     - lxml==4.9.0 #==py39hb9d737c_0
     - markdown==3.3.7 #==pyhd8ed1ab_0
     - matplotlib>=3.3.7 #==3.5.2 #==py39hf3d152e_0
@@ -66,7 +66,7 @@ dependencies:
     - netcdf4==1.5.8 #==nompi_py39h64b754b_101
     - networkx>=2.8.3 ##==2.8.4 #==pyhd8ed1ab_0
     - numba>=0.55.1 ##0.55.2 #==py39h66db6d7_1
-    - numpy>=1.23.4
+    - numpy>=1.14.5
     - olefile==0.46 #==pyh9f0ad1d_1
     - oset==0.1.3 #==py_1
     - pandas==1.4.2 #==py39h1832856_2
