--- a/environment.yml
+++ b/environment.yml
@@ -5,17 +5,22 @@ channels:
   - mathieu
   - anaconda
 dependencies:
-  - scikit-image
+  - python>=3.8
+  - gcc
+  - gxx
+  - cxx-compiler
+  - pdal
+  - python-pdal
+  - gdal
   - h5py
   - pip
   - pip:
-    - git+https://github.com/JorisTimmermans/data-access.git
-    - git+https://github.com/JorisTimmermans/atmospheric_correction.git
     - git+https://github.com/QCDIS/multiply-core.git
+    - git+https://github.com/JorisTimmermans/data-access.git
     - git+https://github.com/QCDIS/inference-engine.git
-    - git+https://github.com/QCDIS/prior-engine.git
-    - git+https://github.com/JorisTimmermans/atmospheric_correction.git
-    - git+https://github.com/QCDIS/vm-support.git
-    - git+https://github.com/multiply-org/multiply-orchestration.git
     - git+https://github.com/QCDIS/KaFKA-InferenceEngine.git
+    - git+https://github.com/multiply-org/multiply-orchestration.git
+    - git+https://github.com/QCDIS/vm-support.git
+    - git+https://github.com/QCDIS/prior-engine.git
     - git+https://github.com/QCDIS/BRDF_descriptors.git
+    - git+https://github.com/JorisTimmermans/atmospheric_correction.git
