--- a/environment.yml
+++ b/environment.yml
@@ -16,10 +16,16 @@ dependencies:
   - pyproj
   - xarray
   - sentinelhub
+  - numpy
+  - lxml
+  - scipy
+  - shapely
+  - beautifulsoup4
+  - pyyaml
   - pip
   - pip:
     - git+https://github.com/QCDIS/multiply-core.git
-    - git+https://github.com/JorisTimmermans/data-access.git
+    - git+https://github.com/QCDIS/data-access.git
     - git+https://github.com/QCDIS/inference-engine.git
     - git+https://github.com/QCDIS/KaFKA-InferenceEngine.git
     - git+https://github.com/multiply-org/multiply-orchestration.git
