--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
 name: venv
 channels:
   - conda-forge
-  - defaults
-  - mathieu
-  - anaconda
+#  - defaults
+#  - mathieu
+#  - anaconda
 dependencies:
   - python>=3.8
   - gcc
@@ -30,7 +30,7 @@ dependencies:
     - git+https://github.com/QCDIS/data-access.git
     - git+https://github.com/QCDIS/inference-engine.git
     - git+https://github.com/QCDIS/KaFKA-InferenceEngine.git
-    - git+https://github.com/multiply-org/multiply-orchestration.git
+    - git+https://github.com/QCDIS/multiply-orchestration
     - git+https://github.com/QCDIS/vm-support.git
     - git+https://github.com/QCDIS/prior-engine.git
     - git+https://github.com/QCDIS/BRDF_descriptors.git
