--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,15 @@
 name: venv
 channels:
   - conda-forge
-#  - defaults
-#  - mathieu
-#  - anaconda
 dependencies:
+  - lazrs-python
+  - laspy
+  - pyshp
+  - pytest
+  - xarray
+  - netcdf4
+  - h5netcdf
+  - flake8
   - python>=3.8
   - gcc
   - gxx
