--- a/environment.yml
+++ b/environment.yml
@@ -3,10 +3,33 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - flake8
-  - mamba
+  - python>=3.8
+  - gdal=2.4
+  - libgdal
+  - pyproj
   - pyyaml
-  - requests
+  - numpy
+  - scipy
+  - setuptools
+  - gcc=12.1.0
+  - cxx-compiler
+  - libgcc
+  - libstdcxx-ng
+  - lazrs-python
+  - laspy
+  - plyfile
+  - beautifulsoup4
+  - lxml
+  - shapely
+  - pyshp
+  - pytest
+  - xarray
+  - netcdf4
+  - h5netcdf
+  - flake8
+  - sentinelhub
+  - pyyaml
+  - pytest-shutil
   - pip
   - pip:
     - git+https://github.com/QCDIS/multiply-core.git
