--- a/environment.yaml
+++ b/environment.yaml
@@ -4,12 +4,12 @@ channels:
   - defaults
   - enable_revoked
 dependencies:
-  - libgdal
+  - libgdal=2.4
   - beautifulsoup4
   - cxx-compiler
   - flake8
   - gcc=12.1.0
-  - gdal
+  - gdal=2.4
   - h5netcdf
   - Jinja2
   - laspy
