--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -11,4 +11,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build container
       run: |
-        docker build . --file Dockerfile
+        docker build . --file Dockerfile -t miniconda-multiply
+        docker build . --file DockerfileTest
