--- a/DockerfileTest
+++ b/DockerfileTest
@@ -11,7 +11,7 @@ FROM python:3.11-buster
 COPY --from=build /venv/ /venv/
 
 ENV PATH=/venv/bin:$PATH
-RUN source /venv/bin/activate
+RUN ["/bin/bash", "-c", "source /venv/bin/activate"]
 RUN echo "source /venv/bin/activate" >> ~/.bashrc
 SHELL ["/bin/bash", "--login", "-c"]
 
